# camunda-modeler

./: .babelrc  .codecov.yml  .eslintignore  .eslintrc  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .jshintrc  .mergify.yml  .snyk  .travis.yml  .wiredeps  Area of triangle.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Gruntfile.js  LICENSE  NOTES.md  NOTICE  PROTOCOL_REGISTRATION.md  README.md  SECURITY.md  TAURI_MIGRATION_PLAN.md  THIRD_PARTY_NOTICES  add-menuitem.sh  appveyor.yml  babel.config.js  dev.js  electron-builder.json  eslint.config.mjs  forge.config.js  globals.d.ts  gulpfile.js  index.html  index.js  lerna.json  main.js  (+16 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUG_REPORT.yml  FEATURE_REQUEST.md  FEATURE_REQUEST.yml  TASK.md  TASK.yml  config.yml
.github/workflows/: ADD_TO_PROJECT.yaml  ADD_TO_PROJECT.yml  AFTER_MERGE.yml  ASSIGN_MILESTONE.yml  BUILD_ON_DEMAND.yml  CHECK_LICENSES.yml  CI.yml  CODE_SCANNING.yml  COMMENT_DEVELOP_FIX.yml  COMMENT_TARGETS_MAIN.yml  CREATE_MILESTONE.yml  MERGE_MAIN_TO_DEVELOP.yml  MERGE_MASTER_TO_DEVELOP.yml  NEW_ALPHA_ISSUE.yml  NEW_MAJOR_ISSUE.yml  NIGHTLY.yml  PUBLISH_RELEASE.yml  RELEASE.yml  RELEASE_ISSUE.yml  TARGET_DEVELOP.yml  codeql-analysis.yml  dockerhub-release.yml  dockerhub.yml  test.yml
app/: .eslintrc  Cli.js  FileSystem.js  Workspace.js  config.js  dev.js  file.js  index.js  menus.js  package-lock.json  package.json  prod.js  webpack.config.js  webpack.main.config.js  webpack.preload.config.js  windows.js
app/develop/: index.js
client/: .babelrc  .env.development  .env.production  .eslintrc  .gitignore  .mocharc.js  .wiredeps  Gruntfile.js  README.md  karma.config.js  package-lock.json  package.json  rspack.config.js  webpack.config.js
client2/: .babelrc  .eslintrc  Gruntfile.js  package.json
configs/: Info.plist
docs/: INTEGRATION_TEST.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md
e2e/: .eslintrc
plugins/: pluginify.js
resources/: .eslintrc  flags.json  simple.bpmn
src-tauri/: .gitignore  Cargo.toml  README.md  lifecycle-probe-driver.js  preload-shim.js
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/src/: dialog.rs  ipc.rs  lib.rs  main.rs  menu.rs
src-tauri/crates/lifecycle-probe/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/lifecycle-probe/capabilities/: default.json
src-tauri/crates/lifecycle-probe/src/: main.rs
src-tauri/crates/modeler-backend/: Cargo.toml
src-tauri/crates/modeler-backend/src/: config.rs  dispatch.rs  error.rs  file_context.rs  file_system.rs  flags.rs  indexer.rs  lib.rs  processors.rs  watcher.rs  workspace.rs  zeebe.rs  zeebe_utils.rs
src-tauri/crates/modeler-backend/tests/: config_parity.rs  file_context_orchestrator.rs  file_context_parity.rs  file_system_parity.rs  flags_parity.rs  watcher_parity.rs  workspace_parity.rs  zeebe_live.rs  zeebe_utils_parity.rs
tasks/: .eslintrc  after-all-artifact-build.js  after-pack.js  after-sign.js  after-sign.mjs  bundle.js  distro.js  license-book.js  link-dependencies.js  package.js  send-license-book-summary.js  test-distro.js
test/: expect.js
(+3076 files in other folders)
