[package]
name = "camunda-modeler-tauri"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

# Thin Tauri shell. All parity-critical logic lives in `modeler-backend`; this
# crate only exposes the `ipc_dispatch` command and injects the preload shim.

[lib]
name = "camunda_modeler_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
modeler-backend = { path = "../crates/modeler-backend" }
