[package]
name = "camunda-modeler-tauri"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

# Thin Tauri shell. All parity-critical logic lives in `modeler-backend`; this
# crate only exposes the `ipc_dispatch` command and injects the preload shim.

[lib]
name = "camunda_modeler_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enables the webview devtools toggle in the Window menu (forwards to Tauri's
# own `devtools` feature). Always available in debug builds regardless.
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
modeler-backend = { path = "../crates/modeler-backend" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
