[package]
name = "modeler-backend"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

# Pure backend logic for the Camunda Modeler Tauri migration.
# Deliberately has NO `tauri` dependency so it compiles and tests fast
# (no WebKit toolchain) and holds the parity-critical behavior.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
notify = "6"
roxmltree = "0.20"
quick-xml = "0.36"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
